style: fixed broken layout on mobile

--- a/src/statefull/SearchInput/styles.scss
+++ b/src/statefull/SearchInput/styles.scss
@@ -7,6 +7,7 @@
   color: tomato;
   display: block;
   font-size: 16px;
+  box-shadow: 0px 5px 20px rgba(0,0,0,.07);
 
   @media screen and (max-width: 768px) {
     width: 60%;
